# abliterator

./: .gitignore  README.md  abliterate.py  app.py  calibration_results.json  pyproject.toml  requirements.txt  temp.py  test_abliteration.py
eval_abliterated/: comparison.md  qwen3-4b-instruct-2507_null-space-abliterated_results_2025-12-15T07-30-06.978793.json  qwen3-4b-instruct-2507_null-space-abliterated_v2_results_2025-12-15T11-44-51.953374.json  qwen3-4b-instruct-2507_results_2025-12-15T08-32-44.222377.json
eval_results/: Qwen3.5-9B-detector-audit_20260712_095106.json  Qwen3.5-9B-detector-audit_20260712_095553.json
prompts/: preservation.txt
src/: abliterate.py  cli.py  cli_components.py  config_manager.py  feature_surgery.py  feature_surgery_cli.py  gguf_export.py  jlens.py  jlens_iterative.py  kl_monitor.py  model_utils.py  null_space.py
templates/: index.html
utils/: __init__.py  abliteration_search.py  batch_quantize.py  compare_evals.py  quality_eval.py  refusal_calibration.py  refusal_detector.py  refusal_eval.py  sae_loader.py  test_abliteration.py  workspace_refusal_detector.py
